fix: [PL-26644]: Popover alignment fix for SplitButton

--- a/packages/uicore/src/components/SplitButton/SplitButton.css
+++ b/packages/uicore/src/components/SplitButton/SplitButton.css
@@ -33,6 +33,7 @@
 .splitButton {
   position: relative;
   display: flex;
+  align-items: center;
   button.bp3-button {
     box-shadow: none;
   }
